Fix for IE8 : When changing language on small/medium screen, text into completeBlock directive was out of his container. Fixed.

--- a/site_dev/assets/app_components/css/items/completeBlock.less
+++ b/site_dev/assets/app_components/css/items/completeBlock.less
@@ -27,15 +27,19 @@
 		border-left: 1px solid @color_black;
 		border-bottom: 1px solid @color_black;
 		border-right: 1px solid @color_black;
-		padding:10px;
+		min-height: 160px;
+		width: 100%;
+		padding-top: 10px;
+		padding-bottom: 10px;
 
 		.body-title {
 			font-size: 19px;
-			margin-bottom: 10px;
+			margin-left: 10px;
+			margin-right: 10px;
 		}
 
 		.body-text {
-
+			margin: 10px;
 		}
 	}
 
